# Castor-Studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  Castor.sln  README.md  build-native.cmd  build-native.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  technical_story.yml  user_story.yml
.github/workflows/: build-and-test.yml
Castor.Engine/: Castor.Engine.csproj
Castor.Engine/Models/: CaptureSourceOption.cs  DiscoveredCamera.cs  SceneItem.cs  SourceItem.cs  SourceKind.cs
Castor.Engine/Services/: ApplicationLifecycleService.cs  EngineServiceCollectionExtensions.cs  IApplicationLifecycleService.cs  IMediaMtxService.cs  INativeCaptureService.cs  INetworkCameraDiscoveryService.cs  IRecorderService.cs  ISceneService.cs  IStudioController.cs  MediaMtxService.cs  NativeCaptureService.cs  NetworkCameraDiscoveryService.cs  RecorderService.cs  SceneService.cs  StudioController.cs
Castor.Interop/: Castor.Interop.csproj  CastorNative.cs
Castor.Native/: Castor.Native.csproj  CastorNative.cs
CastorApplication/: App.axaml  App.axaml.cs  Castor.sln  CastorApplication.csproj  Program.cs  ServiceCollectionExtensions.cs  ViewLocator.cs  config.json  mediamtx.yml
CastorApplication/.github/workflows/: build-and-test.yml
CastorApplication/.husky/: commit-msg  task-runner.json
CastorApplication/CastorApplication/: App.axaml  CastorApplication.csproj  app.manifest
CastorApplication/CastorApplication/Factories/: StudioDockFactory.cs
CastorApplication/CastorApplication/ViewModels/: StudioViewModel.cs  ViewModelBase.cs
CastorApplication/CastorApplication/Views/: MulticamView.axaml  SettingsView.axaml  SettingsView.axaml.cs  StudioView.axaml  StudioView.axaml.cs
CastorApplication/CastorCore/: CastorCore.cs  CastorCore.csproj  Pipeline.cs
CastorApplication/CastorCore/Encoder/: Mp4Encoder.cs
CastorApplication/CastorCore/Frame/: AudioSample.cs  MediaTimestamp.cs  RawVideoFrame.cs
CastorApplication/CastorCore/Input/Audio/: AudioCaptureConfig.cs  AudioFormat.cs  IAudioInput.cs  WasapiAudioCapture.cs
CastorApplication/CastorCoreTests/: CastorCoreTests.csproj
CastorApplication/CastorCoreTests/Mock/: MockVideoFrame.cs  MockVideoInput.cs
CastorApplication/Controls/: DirectXPreviewView.cs
CastorApplication/Factories/: StudioDockFactory.cs
CastorApplication/Models/: ApplicationSettings.cs  CameraItem.cs  CaptureSourceOption.cs  SceneItem.cs  SourceItem.cs
CastorApplication/Models/Auth/: AuthFlowType.cs  AuthResult.cs  AuthSession.cs  DeviceCodeResult.cs  UserProfile.cs
CastorApplication/Models/Config/: AppConfig.cs  ProviderConfig.cs
CastorApplication/Models/Export/: SceneCollectionExport.cs  SceneExportMapper.cs
CastorApplication/Models/Settings/: ApplicationSettings.cs
CastorApplication/Properties/: launchSettings.json
CastorApplication/Protos/: ia_analysis.proto
CastorApplication/Services/: AppSettings.cs  AvaloniaFilePickerService.cs  AvaloniaThemeService.cs  BrowserLauncher.cs  IFilePickerService.cs  IThemeService.cs  MediaMtxService.cs  MulticamSourcesService.cs  NetworkScanService.cs  PodcastAiService.cs  RecorderService.cs  SceneService.cs  SettingsService.cs  ThumbnailService.cs  VlcService.cs  WebBrowser.cs
CastorApplication/Services/Ai/: AiAnalysisEvents.cs  GrpcAiAnalysisClient.cs  IAiAnalysisClient.cs
CastorApplication/Services/Auth/: AuthService.cs  AuthSessionService.cs  IAuthService.cs  IAuthSessionService.cs
CastorApplication/Services/Config/: IConfigService.cs  JsonConfigService.cs
CastorApplication/Services/Settings/: SettingsService.cs
CastorApplication/Styles/: SettingsStyles.axaml
CastorApplication/ViewModels/: AddSourceDialogViewModel.cs  MainViewModel.cs  MainWindowViewModel.cs  MulticamViewModel.cs  SceneViewModel.cs  SettingsViewModel.cs  StudioViewModel.cs
CastorApplication/ViewModels/Settings/: AccountsSettingsSectionViewModel.cs  AudioSettingsSectionViewModel.cs  GeneralSettingsSectionViewModel.cs  ISettingsSection.cs  OutputSettingsSectionViewModel.cs  SettingsSectionItem.cs  SettingsSectionViewModel.cs  SettingsViewModel.cs  StreamingSettingsSectionViewModel.cs  VideoSettingsSectionViewModel.cs
CastorApplication/Views/: AddSourceDialog.axaml  AddSourceDialog.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MulticamView.axaml  MulticamView.axaml.cs  ScenesView.axaml  ScenesView.axaml.cs  SettingsView.axaml  StudioView.axaml  StudioView.axaml.cs
CastorApplication/Views/Settings/: SettingsView.axaml  SettingsView.axaml.cs
ai-hub/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ai-hub/configs/: base.yaml  podcast.yaml  sport.yaml
ai-hub/core/: model_loader.py  preprocessing.py  utils.py  vad.py
ai-hub/modules/podcast_ai/: __init__.py  config.yaml  inference.py  model.py
ai-hub/modules/sport_ai/: config.yaml  inference.py  model.py
cmake/: copy_dir_if_exists.cmake
libcastor/: .gitignore  CMakeLists.txt  Justfile  vcpkg.json
libcastor/cmake/: DownloadFFmpeg.cmake
libcastor/include/: AudioCapture.h  AudioEncode.h  FileCapture.h  Muxer.h  PreviewRenderer.h  Recorder.h  VideoCapture.h  VideoEncode.h  castor_api.h  verison.h
libcastor/include/output/: file_output.h  output.h  rtmp_output.h
libcastor/include/scene/: scene.h
libcastor/include/services/: streaming_service.h
libcastor/include/source/: source.h  source_info.h  source_registry.h
libcastor/include/utils/: c99defs.h  darray.h  sync_clock.h
libcastor/package/include/: version.h
libcastor/scripts/: dev-setup.ps1  download-ffmpeg.ps1  download-ffmpeg.sh
libcastor/src/: AudioCapture.c  AudioEncode.c  AudioProcessLoopback.cpp  FileCapture.c  Muxer.c  PreviewRenderer.cpp  Recorder.c  VideoCapture.cpp  VideoEncode.c  verison.c  version.c
libcastor/src/output/: file_output.c  rtmp_output.c
libcastor/src/scene/: scene.c
libcastor/src/services/: streaming_service.c  twitch_service.c  youtube_service.c
libcastor/src/source/: source.c  source_registry.c
libcastor/src/source/dummy/: dummy_source.c
libcastor/src/utils/: sync_clock.c
scripts/: build-all.ps1  build-dotnet.ps1  build-native.ps1  clean.ps1
(+87 files in other folders)
