[project]
name = "ai-hub"
version = "0.1.0"
description = "Castor AI hub: podcast and sport selectors"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "mediapipe>=0.10.14",
    "ultralytics>=8.3.0",
    "silero-vad>=5.1",
    "onnxruntime>=1.17",
    "pyyaml>=6.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "modules"]
